--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <html>
     <head>
         <title>IOException</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class="container">
+            <div class="page-header">
+                <h1>IOException</h1>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Statistics</h4>
+                </div>
+                <div class="panel-body">
+                    <b>Total PP: </b><span id="total_pp"></span>pp<br />
+                    <b>Accuracy: </b><span id="accuracy"></span>%<br />
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Top Plays</h4>
+                </div>
+                <div class="panel-body">
+                    
+                </div>
+            </div>
+        </div>
         <script type="text/javascript">
-            console.log("HI");
+            $(document).ready(function() {
+                $.get("https://docs.google.com/spreadsheets/d/1kukJCky1iQJfvzEAMCGGtkYy9rOBXlj4BsiEAqKSXCU/pub?gid=197296628&single=true&output=csv", function(result) {
+                    console.log(result);
+                });
+                $.get("https://docs.google.com/spreadsheets/d/1kukJCky1iQJfvzEAMCGGtkYy9rOBXlj4BsiEAqKSXCU/pub?gid=0&single=true&output=csv", function(result) {
+                    console.log(result);
+                });
+            });
         </script>
     </body>
 </html>
