--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
         <script type="text/javascript">
             $(document).ready(function() {
-                $.get("https://docs.google.com/spreadsheets/d/1kukJCky1iQJfvzEAMCGGtkYy9rOBXlj4BsiEAqKSXCU/pub?gid=197296628&single=true&output=csv", function(result) {
+                $.get("http://cors.io/docs.google.com/spreadsheets/d/1kukJCky1iQJfvzEAMCGGtkYy9rOBXlj4BsiEAqKSXCU/pub?gid=197296628&single=true&output=csv", function(result) {
                     console.log(result);
                 });
-                $.get("https://docs.google.com/spreadsheets/d/1kukJCky1iQJfvzEAMCGGtkYy9rOBXlj4BsiEAqKSXCU/pub?gid=0&single=true&output=csv", function(result) {
+                $.get("http://cors.io/docs.google.com/spreadsheets/d/1kukJCky1iQJfvzEAMCGGtkYy9rOBXlj4BsiEAqKSXCU/pub?gid=0&single=true&output=csv", function(result) {
                     console.log(result);
                 });
             });
